--- a/dispatcher.links.menu.yml
+++ b/dispatcher.links.menu.yml
@@ -1,24 +1,24 @@
-#hos_sms_dispatcher.main_menu:
+#dispatcher.main_menu:
 #  title: 'HOS Messaging'
 #  description: 'Manage HOS messaging.'
-#  route_name: 'hos_sms_dispatcher.main_menu'
+#  route_name: 'dispatcher.main_menu'
 #  weight: -9
 #  parent: 'system.admin'
 
-#hos_sms_dispatcher.hos_message_manager_form:
+#dispatcher.hos_message_manager_form:
 #  title: 'HOS Messaging'
-#  route_name: hos_sms_dispatcher.hos_message_manager_form
+#  route_name: dispatcher.hos_message_manager_form
 #  description: 'Manages sms settings'
 #  #parent: system.admin_config_system
-#  parent: hos_sms_dispatcher.main_menu
+#  parent: dispatcher.main_menu
 #  weight: 10
 
-#hos_sms_dispatcher.message_test_form:
+#dispatcher.message_test_form:
 #  title: 'HOS Message Test'
-#  route_name: hos_sms_dispatcher.message_test_form
+#  route_name: dispatcher.message_test_form
 #  description: 'Message Test'
 #  #parent: system.admin_config_system
-#  parent: hos_sms_dispatcher.main_menu
+#  parent: dispatcher.main_menu
 #  weight: 20
 
 #message_archiver.message_archiver_form:
@@ -26,5 +26,5 @@
 #  route_name: message_archiver.message_archive_form
 #  description: 'Message texts archived'
   #parent: system.admin_config_system
-#  parent: hos_sms_dispatcher.main_menu
+#  parent: dispatcher.main_menu
 #  weight: 99
